# rust-totp

./: Cargo.toml  README.md  secrets.toml  secrets.toml.example  settings.toml.example
.github/workflows/: rust.yml
src/: load.rs  main.rs
